WebRTC: ice-char can not contain '=' characters for credentials https://bugs.webkit.org/show_bug.cgi?id=159207

Patch by Alejandro G. Castro <alex@igalia.com> on 2016-06-29
Reviewed by Eric Carlson.

Source/WebCore:

Avoid a general calculation to get a base64 without padding which
was wrong in the randomString function. Because each parameter
using the function requires a different setup depending of the
specification and this is not a general API, it is a better
solution to calculate and store the sizes we want to use, comment
them and test them, considering we use base64 to generate the
strings we just need to avoid padding.

Existing test modified to match the correct behavior.

* Modules/mediastream/MediaEndpointPeerConnection.cpp:
(WebCore::randomString): Now the size is the one passed.
(WebCore::MediaEndpointPeerConnection::MediaEndpointPeerConnection):
Used different valid values following the sdp parser in each case.

LayoutTests:

Modified the parser to make the regexp similar to the one we have
in WebCore.

* fast/mediastream/resources/sdp-utils.js:
(printComparableSessionDescription):

Canonical link: https://commits.webkit.org/177375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202628 268f45cc-cd09-0410-ab3c-d52691b4dbfc